////////////////////////////////////////////////////////////////////////////////
// Copyright Â© 2018 Privategrity Corporation                                   /
//                                                                             /
// All rights reserved.                                                        /
////////////////////////////////////////////////////////////////////////////////

// Call ./generate.sh to generate the protocol buffer code

syntax = "proto3";

package parse;
option go_package = "ud";

// Contains the Hash and its Type
message HashFact {
  bytes hash = 1;
  int32 type = 2;
}

// Describes a user lookup result. The ID, public key, and the
// facts inputted that brought up this user.
message Contact {
  repeated bytes userID = 1;
  repeated bytes pubKey = 2;
  repeated HashFact trigFacts = 3;
}

// Message sent to UDB to search for users
message SearchSend {
  // PublicKey used in the registration
  repeated HashFact fact = 1;
  // ID of the session used to create this session
  int32 commID = 2;
}

// Message sent from UDB to client in response to a search
message SearchResponse {
  // ID of the session created
  repeated Contact contacts = 1;
  int32 commID = 2;
}

// Message sent to UDB for looking up a user
message LookupSend {
  repeated bytes userID = 1;
  int32 commID = 2;
}

// Message sent from UDB for looking up a user
message LookupResponse {
  repeated bytes pubKey = 1;
  int32 commID = 2;
}